Policies/03-authentik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-network-policy
  namespace: authentik
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: grafana
    ports:
    - protocol: TCP
      port: 9000
    - protocol: TCP
      port: 9443
  egress:
  # internal communication (postgresql, redis)
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: authentik
  # DNS resolution
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
